  arguments). (Arnaud)
- Fixed bug #48378 (exif_read_data() segfaults on certain corrupted .jpeg 
  files). (Pierre)
- Fixed bug #48359 (Script hangs on snmprealwalk if OID is not
  increasing). (Ilia, simonov at gmail dot com)
- Fixed bug #48273 (snmp*_real_walk() returns SNMP errors as values).
  (Ilia, lytboris at gmail dot com)
- Fixed bug #48247 (Crash on errors during startup). (Stas)
- Fixed bug #42143 (The constant NAN is reported as 0 on Windows)
  (Kanwaljeet Singla, Venkat Raman Don)


27 May 2009, PHP 5.2.10RC1
- Updated timezone database to version 2009.8 (2009h) (Derick)

- Changed default value of array_unique()'s optional sorting type parameter
  back to SORT_STRING to fix backwards compatibility breakage introduced in 
  PHP 5.2.9. (Moriyoshi)

- Added new CURL options CURLOPT_REDIR_PROTOCOLS, CURLOPT_PROTOCOLS,
  and CURLPROTO_* for redirect fixes in CURL 7.19.4. (Yoram Bar Haim, Stas)
- Added support for Sun CC (FR #46595 and FR #46513). (David Soria Parra)

- Fixed memory corruptions while reading properties of zip files. (Ilia)
- Fixed memory leak in ob_get_clean/ob_get_flush. (Christian)
- Fixed segfault on invalid session.save_path. (Hannes)
- Fixed leaks in imap when a mail_criteria is used. (Pierre)

- Fixed bug #48336 (ReflectionProperty::getDeclaringClass() does not work with
  redeclared property). (patch by Markus dot Lidel at shadowconnect dot com)
- Fixed bug #48326 (constant MSG_DONTWAIT not defined). (Arnaud)
- Fixed bug #48313 (fgetcsv() does not return null for empty rows). (Ilia)
- Fixed bug #48309 (stream_copy_to_stream() and fpasstru() do not update stream
  position of plain files). (Arnaud)
- Fixed bug #48307 (stream_copy_to_stream() copies 0 bytes when $source is a 
  socket). (Arnaud)
- Fixed bug #48256 (Crash due to double-linking of history.o).
  (tstarling at wikimedia dot org)
- Fixed bug #48248 (SIGSEGV when access to private property via &__get). 
  (Felipe)